find a single article controller and services are implement completed
